@@ -1,6 +1,7 @@
 Revision history for Config::App
 
 {{$NEXT}}
+        - Support for preinclude and optional_preinclude
         - Update Travis YAML
 
 1.11      2019-04-02 11:03:41-07:00 America/Los_Angeles
